--- a/index.html
+++ b/index.html
@@ -1,41 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 </head>
+
 <body>
- <nav class="container">
-    <nav class="star">
-        <div class="star1">
-            <img src="https://preview.colorlib.com/theme/security/img/logo.png" alt="">
-        </div>
-        <div class="star2">
-        <div class="start1">Home</div>
-        <div class="start2">Aboutus</div>
-        <div class="start3">Service</div>
-        <div class="start4">Team</div>
-        <div class="start5">Pice</div>
-        <div class="start6">Blog</div>
-        <div class="start7">Contact</div>
-        <div class="start8">Pages</div>
-        </div>
+    <nav class="container">
+        <nav class="star">
+            <div class="star1">
+                <img src="https://preview.colorlib.com/theme/security/img/logo.png" alt="">
+            </div>
+            <div class="star2">
+                <div class="start6">Home</div>
+                <div class="start6">Aboutus</div>
+                <div class="start6">Service</div>
+                <div class="start6">Team</div>
+                <div class="start6">Pice</div>
+                <div class="start6">Blog</div>
+                <div class="start6">Contact</div>
+                <div class="start6">Pages</div>
+            </div>
+        </nav>
     </nav>
- </nav>
- <section class="bing">
-   <div class="container">
-       <div class="bing1">
-        <h3>OPENNING ON 21ST FEBRUARY, 2018</h3>
-        <h1>Exhibition on Modern Era</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.
-             sed do eiusmod tempor incididunt..</p>
-             <button class="Get">GET STARTED</button>
+    <section class="bing">
+        <div class="container">
+            <div class="bing1">
+                <h3>OPENNING ON 21ST FEBRUARY, 2018</h3>
+                <h1>Exhibition on Modern Era</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.
+                    sed do eiusmod tempor incididunt..</p>
+                <button class="Get">GET STARTED</button>
+            </div>
+        </div>
+    </section>
+    <section class="basliq">
+        <div class="Basic">
+            <h1>Our Offered Services</h1>
+            <p>Who are in extremely love with eco friendly system.</p>
+        </div>
+    </section>
+    <section class="Service">
+        <div class="Service1">
+            <div class="rep1">
+                <img src="https://preview.colorlib.com/theme/security/img/s1.jpg" alt="">
+            </div>
+            <div class="text1">
+                <h3>Basic & Common Repairs</h3>
+                <p>Computer users and programmers have become so accustomed to using Windows, even for the changing
+                    capabilities and the appearances of the graphical.</p>
+                <button></button>
+                <button></button>
+            </div>
+        </div>
+        <div class="Service2">
+            <div class="rep2">
+                <img src="https://preview.colorlib.com/theme/security/img/s2.jpg" alt="">
+            </div>
+            <div class="text2">
+                <h3>Brake Repairs & Services</h3>
+                <p>Computer users and programmers have become so accustomed to using Windows, even for the changing
+                    capabilities
+                    and the appearances of the graphical.</p>
+                <button></button>
+                <button></button>
+            </div>
+        </div>
+        <div class="Service3">
+            <div class="rep3">
+                <img src="https://preview.colorlib.com/theme/security/img/s3.jpg " alt="">
+            </div>
+            <div class="text3">
+                <h3>Preventive Maintenance</h3>
+                <p>Computer users and programmers have become so accustomed to using Windows, even for the changing
+                    capabilities and the appearances of the graphical.</p>
+                <button></button>
+                <button></button>
+            </div>
+        </div>
+    </section>
+    <div class="basliq2">
+        <div class="good">
+            <h1>Some Features that Made us Unique</h1>
+            <p>Who are in extremely love with eco friendly system.</p>
+        </div>
     </div>
-   </div>
- </section>
+    <div class="basliq3">
+        <div class="secret1">
+            <h3><i class="bi bi-person-fill"></i>  Expert Technicians</h3>
+            <p>Usage of the Internet is becoming more common due 
+                to rapid advancement of technology and power.</p>
+        </div>
+        <div class="secret2">
+            <h3><i class="bi bi-newspaper"></i>  Professional Service</h3>
+            <p>Usage of the Internet is becoming more common due to rapid 
+                advancement of technology and power.</p>
+        </div>
+        <div class=" secret3">
+            <h3> <i class="bi bi-telephone-fill"></i>   Great Support</h3>
+            <p>Usage of the Internet is becoming more common due to
+                 rapid advancement of technology and power.</p>
+        </div>
+    </div>
+    <div class="basliq4">
+        <div class="secret4">
+            <h3> <i class="bi bi-rocket-takeoff-fill"></i>Technical Skills</h3>
+            <p>Usage of the Internet is becoming more common due to rapid
+                 advancement of technology and power.</p>
+           
+        </div>
+        <div class="secret5">
+            <h3> <i class="bi bi-gem"></i>  Highly Recomended</h3>
+            <p>Usage of the Internet is becoming more common due to 
+                rapid advancement of technology and power.</p>
+        </div>
+        <div class=" secret6">
+            <h3> <i class="bi bi-chat-fill"></i>  Positive Reviews</h3>
+            <p>Usage of the Internet is becoming more common due to rapid
+                 advancement of technology and power.</p>
+        </div>
+    </div>
+    <div class="flash">
+        <div class="flash1">
+            <h1>Latest From Our Blog</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+    </div>
+    <div class="paralel">
+        <div class="paralel1">
+            <div class="part1">
+            <img src="https://preview.colorlib.com/theme/security/img/b1.jpg  " alt="">
+            <div class="bbb">
+                <div class="space">10 Jan 2018</div>
+            </div>
+        </div>
+        </div>
+        <div class="paralel2">
+            <div class="part2">
+            <img src="https://preview.colorlib.com/theme/security/img/b2.jpg" alt="">
+            <div class="aaa">
+                <div class="space1">10 Jan 2018</div>
+            </div>
+        </div>
+        </div>
+        <div class="paralel3">
+            <div class="part3">
+            <img src="https://preview.colorlib.com/theme/security/img/b3.jpg" alt="">
+            <div class="ccc">
+                <div class="space2">10 Jan 2018</div>
+            </div>
+        </div>
+        </div>
+        <div class="paralel4">
+            <div class="part4">
+            <img src="https://preview.colorlib.com/theme/security/img/b4.jpg" alt="">
+            <div class="ddd">
+                <div class="space3">10 Jan 2018</div>
+            </div>
+        </div>
+        </div>
+    </div>
 </body>
 </html>
